sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value i
      while (i!=nb-2){
             ^AlgBubbleSort1:8: error: not found: value i
        while (plusPetit(i+1,i)){
                         ^AlgBubbleSort1:8: error: not found: value i
        while (plusPetit(i+1,i)){
                             ^AlgBubbleSort1:9: error: not found: value i
          echange(i+1,i)
                  ^AlgBubbleSort1:9: error: not found: value i
          echange(i+1,i)
                      ^AlgBubbleSort1:11: error: not found: value i
          i=i+2
          ^