sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nb=getNombreValeurs()
  var k=1
  while (k!=0){
    k=0
      while (i!=nb-2){
        while (plusPetit(i+1,i)){
          echange(i+1,i)
          k=k+1
          i=i+2
        }
      }
  }
}